fix playbar on firefox

--- a/app/assets/stylesheets/_playback.scss
+++ b/app/assets/stylesheets/_playback.scss
@@ -37,6 +37,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-grow: 1;
 }
 #audio-seek-container{
   flex-grow: 1;
